packages/sci-cream/src/balancing/snapshots/sci_cream__balancing__tests__balance_quality_boozy_abv_vs_pac.snap
---
source: packages/sci-cream/src/balancing/tests.rs
expression: "report_balance_quality(&comps_from_names(BOOZY_ING), &BOOZY_DISPARATE_TARGETS,\nBOTH_SOLVERS, Some(BOOZY_ING))"
---
targets:
  TotalSugars         17.00
  TotalPAC            28.00
  Alcohol              3.18

[nalgebra]
  [           ingredient           | qty ]
  3.25% Milk                      -1132.73
  40% Cream                       1189.44
  Sucrose                           33.74
  Grand Marnier Cordon Rouge         9.55

  [      key       | target | achieved |  error  ]
  TotalSugars         17.00     17.00      0.00 pp
  TotalPAC            28.00     28.00      0.00 pp
  Alcohol              3.18      3.18      0.00 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        1       0.00 pp     0.00 pp

[nnls]
  [           ingredient           | qty ]
  3.25% Milk                         0.00
  40% Cream                         81.91
  Sucrose                           10.51
  Grand Marnier Cordon Rouge         7.58

  [      key       | target | achieved |  error  ]
  TotalSugars         17.00     14.51     14.64 pp
  TotalPAC            28.00     34.89     24.62 pp
  Alcohol              3.18      2.52     20.65 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0      24.62 pp    20.39 pp
