packages/sci-cream/src/balancing/snapshots/sci_cream__balancing__tests__balance_quality_chocolate_coupled_cocoa.snap
---
source: packages/sci-cream/src/balancing/tests.rs
expression: "report_balance_quality(&comps_from_names(DAIRY_COCOA_ING),\n&CHOCOLATE_COUPLED_COCOA_TARGETS, BOTH_SOLVERS, Some(DAIRY_COCOA_ING))"
---
targets:
  CocoaSolids          6.00
  CocoaButter          1.00
  TotalSugars         20.00

[nalgebra]
  [           ingredient           | qty ]
  3.25% Milk                        37.98
  40% Cream                         38.38
  Ghirardelli 100% Unsweetened...    6.58
  Sucrose                           17.07

  [      key       | target | achieved |  error  ]
  CocoaSolids          6.00      5.28     11.97 pp
  CocoaButter          1.00      1.10      9.61 pp
  TotalSugars         20.00     20.00      0.00 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0      11.97 pp     8.86 pp

[nnls]
  [           ingredient           | qty ]
  3.25% Milk                         0.00
  40% Cream                         75.65
  Ghirardelli 100% Unsweetened...    6.58
  Sucrose                           17.77

  [      key       | target | achieved |  error  ]
  CocoaSolids          6.00      5.28     11.97 pp
  CocoaButter          1.00      1.10      9.61 pp
  TotalSugars         20.00     20.00      0.00 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0      11.97 pp     8.86 pp
