packages/sci-cream/src/balancing/snapshots/sci_cream__balancing__tests__balance_quality_dairy_disparate_targets.snap
---
source: packages/sci-cream/src/balancing/tests.rs
expression: "report_balance_quality(&comps_from_names(DAIRY_ING), &DAIRY_DISPARATE_TARGETS,\nBOTH_SOLVERS, Some(DAIRY_ING))"
---
targets:
  Energy             200.00
  MilkFat             12.00
  MSNF                 8.00
  POD                  0.50

[nalgebra]
  [           ingredient           | qty ]
  3.25% Milk                        72.98
  40% Cream                         28.35
  Skimmed Milk Powder               -1.33

  [      key       | target | achieved |  error  ]
  Energy             200.00    147.60     26.20 pp
  MilkFat             12.00     13.70     14.15 pp
  MSNF                 8.00      6.61     17.40 pp
  POD                  0.50      0.58     15.24 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        1      26.20 pp    18.85 pp

[nnls]
  [           ingredient           | qty ]
  3.25% Milk                        70.42
  40% Cream                         29.58
  Skimmed Milk Powder                0.00

  [      key       | target | achieved |  error  ]
  Energy             200.00    155.52     22.24 pp
  MilkFat             12.00     14.12     17.66 pp
  MSNF                 8.00      7.73      3.38 pp
  POD                  0.50      0.67     34.80 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0      34.80 pp    22.52 pp
