packages/sci-cream/src/balancing/snapshots/sci_cream__balancing__tests__balance_quality_dairy_high_msnf.snap
---
source: packages/sci-cream/src/balancing/tests.rs
expression: "report_balance_quality(&comps_from_names(DAIRY_ING), &DAIRY_HIGH_MSNF_TARGETS,\nBOTH_SOLVERS, Some(DAIRY_ING))"
---
targets:
  MSNF                16.00
  Lactose              5.00
  MilkFat             10.00

[nalgebra]
  [           ingredient           | qty ]
  3.25% Milk                        78.27
  40% Cream                         18.56
  Skimmed Milk Powder                3.17

  [      key       | target | achieved |  error  ]
  MSNF                16.00     10.86     32.11 pp
  Lactose              5.00      5.92     18.41 pp
  MilkFat             10.00     10.00      0.00 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0      32.11 pp    21.37 pp

[nnls]
  [           ingredient           | qty ]
  3.25% Milk                        78.27
  40% Cream                         18.56
  Skimmed Milk Powder                3.17

  [      key       | target | achieved |  error  ]
  MSNF                16.00     10.86     32.11 pp
  Lactose              5.00      5.92     18.41 pp
  MilkFat             10.00     10.00      0.00 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0      32.11 pp    21.37 pp
