packages/sci-cream/src/balancing/snapshots/sci_cream__balancing__tests__balance_quality_light_premium_fat_vs_energy.snap
---
source: packages/sci-cream/src/balancing/tests.rs
expression: "report_balance_quality(&comps_from_names(DAIRY_SUGAR_ING),\n&LIGHT_PREMIUM_TARGETS, BOTH_SOLVERS, Some(DAIRY_SUGAR_ING))"
---
targets:
  Energy             150.00
  MilkFat             16.00
  MSNF                11.00
  TotalSugars         18.00

[nalgebra]
  [           ingredient           | qty ]
  3.25% Milk                        60.59
  40% Cream                         25.21
  Skimmed Milk Powder                4.22
  Sucrose                            9.98

  [      key       | target | achieved |  error  ]
  Energy             150.00    188.12     25.41 pp
  MilkFat             16.00     12.10     24.40 pp
  MSNF                11.00     10.69      2.80 pp
  TotalSugars         18.00     15.80     12.20 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0      25.41 pp    18.69 pp

[nnls]
  [           ingredient           | qty ]
  3.25% Milk                        60.59
  40% Cream                         25.21
  Skimmed Milk Powder                4.22
  Sucrose                            9.98

  [      key       | target | achieved |  error  ]
  Energy             150.00    188.12     25.41 pp
  MilkFat             16.00     12.10     24.40 pp
  MSNF                11.00     10.69      2.80 pp
  TotalSugars         18.00     15.80     12.20 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0      25.41 pp    18.69 pp
