packages/sci-cream/src/balancing/snapshots/sci_cream__balancing__tests__balance_quality_priority_abs_pac.snap
---
source: packages/sci-cream/src/balancing/tests.rs
expression: "report_balance_quality(&comps_from_names(SORBET_ING), &SORBET_ABS_PAC_TARGETS,\nABS_PAC_PRIORITY_RUNS, Some(SORBET_ING))"
---
targets:
  AbsPAC              45.00
  TotalPAC            20.00
  POD                 14.00
  TotalSolids         32.00

[baseline]
  [           ingredient           | qty ]
  Water                             64.14
  Sucrose                            7.64
  Dextrose                           8.64
  Underbelly Sorbet Stabilizer...   19.57

  [      key       | target | achieved |  error  ]
  AbsPAC              45.00     35.08     22.04 pp
  TotalPAC            20.00     22.75     13.73 pp
  POD                 14.00     14.00      0.00 pp
  TotalSolids         32.00     35.16      9.89 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0      22.04 pp    13.89 pp

[AbsPAC Critical]
  [           ingredient           | qty ]
  Water                             58.95
  Sucrose                            4.57
  Dextrose                          12.81
  Underbelly Sorbet Stabilizer...   23.67

  [      key       | target | achieved |  error  ]
  AbsPAC              45.00     44.97      0.08 pp
  TotalPAC            20.00     26.97     34.84 pp
  POD                 14.00     14.00      0.00 pp
  TotalSolids         32.00     40.03     25.08 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0      34.84 pp    21.46 pp
