packages/sci-cream/src/balancing/snapshots/sci_cream__balancing__tests__balance_quality_priority_pod_tradeoff.snap
---
source: packages/sci-cream/src/balancing/tests.rs
expression: "report_balance_quality(&comps_from_names(DAIRY_ING), &DAIRY_DISPARATE_TARGETS,\nPOD_PRIORITY_RUNS, Some(DAIRY_ING))"
---
targets:
  Energy             200.00
  MilkFat             12.00
  MSNF                 8.00
  POD                  0.50

[baseline]
  [           ingredient           | qty ]
  3.25% Milk                        70.42
  40% Cream                         29.58
  Skimmed Milk Powder                0.00

  [      key       | target | achieved |  error  ]
  Energy             200.00    155.52     22.24 pp
  MilkFat             12.00     14.12     17.66 pp
  MSNF                 8.00      7.73      3.38 pp
  POD                  0.50      0.67     34.80 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0      34.80 pp    22.52 pp

[POD High]
  [           ingredient           | qty ]
  3.25% Milk                        46.81
  40% Cream                         53.18
  Skimmed Milk Powder                0.00

  [      key       | target | achieved |  error  ]
  Energy             200.00    230.73     15.36 pp
  MilkFat             12.00     22.80     89.96 pp
  MSNF                 8.00      6.95     13.15 pp
  POD                  0.50      0.61     21.18 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0      89.96 pp    47.30 pp

[POD Critical]
  [           ingredient           | qty ]
  3.25% Milk                        13.50
  40% Cream                         86.49
  Skimmed Milk Powder                0.00

  [      key       | target | achieved |  error  ]
  Energy             200.00    336.84     68.42 pp
  MilkFat             12.00     35.04    191.97 pp
  MSNF                 8.00      5.85     26.92 pp
  POD                  0.50      0.51      1.96 pp

  [    sum     |  neg. |    max    |    rms  ]
     1.0000        0     191.97 pp   102.79 pp
