packages/sci-cream/src/balancing/snapshots/sci_cream__balancing__tests__balancing_issues_report_input_errors.snap
---
source: packages/sci-cream/src/balancing/tests.rs
expression: "report_balancing_issues(&comps_from_names(DAIRY_ING),\n&fuse_targets(&targets, &[]), Some(DAIRY_ING),)"
---
palette:
  3.25% Milk
  40% Cream
  Skimmed Milk Powder
targets:
  MilkFat                  NaN
  MSNF                   -3.00
  TotalSolids            30.00
  TotalSolids            32.00

[error] Target for 'Milk Fat' is not finite (NaN)
[error] Target for 'MSNF' is negative (-3)
[error] 'Solids' appears more than once in the targets
[warning] Target for 'Solids' (32) exceeds target for 'Solids' (30), but no ingredient mix can satisfy both — every ingredient's 'Solids' ≤ its 'Solids'
